objects/Intern__c.object
<CustomObject>
    <description>This is description</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Intern_Name__c</fullName>
        <label>Intern Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stipend__c</fullName>
        <label>Stipend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Intern</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IntListV</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>IntListV</label>
    </listViews>
    <nameField>
        <label>Intern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interns</pluralLabel>
    <recordTypes>
        <fullName>Internship_Role</fullName>
        <active>true</active>
        <label>Internship Role</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Stipend</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK( Stipend__c ),
  Stipend__c =0,
 Stipend__c &lt;10000)</errorConditionFormula>
        <errorMessage>Enter the correct value</errorMessage>
    </validationRules>
</CustomObject>